--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm build",
+    "deploy": "https://sarangkaliyath.github.io/Portifolio_V_1.0/"
   },
   "eslintConfig": {
     "extends": [
